Some initial color.

--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -31,15 +31,91 @@
                 overflow: hidden;
             }
             * {
-                /*outline: 1px solid transparent;*/ /*antialiasing in firefox*/
+                outline: 1px solid transparent;/*antialiasing in firefox*/
+            }
+            input {
+                border: none;
             }
             a {
-                color: #00b7ff;
+                color: inherit;
             }
 
             /* specific */
+            input {
+                padding: 4px;
+            }
+            input:active {
+                outline: none;
+              }
             .passwordBox input, .passwordBox button {
                 margin-bottom: 5px
+            }
+
+            .font-color-1 {
+                color: #cff09e;
+            }
+            .font-color-2 {
+                color: #A8DBA8;
+            }
+            .font-color-3 {
+                color: #79BD9A;
+            }
+            .font-color-4 {
+                color: #3B8686;
+            }
+            .font-color-5 {
+                color: #0B486B;
+            }
+
+            .bg-color-1 {
+                background: #cff09e;
+            }
+            .bg-color-2 {
+                background: #A8DBA8;
+            }
+            .bg-color-3 {
+                background: #79BD9A;
+            }
+            .bg-color-4 {
+                background: #3B8686;
+            }
+            .bg-color-5 {
+                background: #0B486B;
+            }
+
+            .border-color-1 {
+                border-color: #cff09e;
+            }
+            .border-color-2 {
+                border-color: #A8DBA8;
+            }
+            .border-color-3 {
+                border-color: #79BD9A;
+            }
+            .border-color-4 {
+                border-color: #3B8686;
+            }
+            .border-color-5 {
+                border-color: #0B486B;
+            }
+            .border-color-5-dark {
+                border-color: #053652
+            }
+2D6969
+            ::-webkit-input-placeholder {
+                color: #2D6969;
+            }
+
+            :-moz-placeholder { /* Firefox 18- */
+                color: #2D6969;
+            }
+
+            ::-moz-placeholder {  /* Firefox 19+ */
+                color: #2D6969;
+            }
+
+            :-ms-input-placeholder {
+                color: #2D6969;
             }
         </style>
     </head>
