--- a/app/views/pages/calendar.html.ejs
+++ b/app/views/pages/calendar.html.ejs
@@ -13,16 +13,15 @@
         <title><%= title %></title>
 
         <!-- Bootstrap -->
-        <link href="/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="/vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />
-        <link href="/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />
+        <!--<link href="/vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet" />-->
+        <!--<link href="/vendor/bootstrap-datepicker/css/datepicker3.css" rel="stylesheet" />-->
 
         <!-- Tooltipster -->
-        <link href="/vendor/tooltipster/css/tooltipster.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-punk.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-noir.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-light.css" rel="stylesheet" />
-        <link href="/vendor/tooltipster/css/themes/tooltipster-shadow.css" rel="stylesheet" />
+        <!--<link href="/vendor/tooltipster/css/tooltipster.css" rel="stylesheet" />-->
+        <!--<link href="/vendor/tooltipster/css/themes/tooltipster-punk.css" rel="stylesheet" />-->
+        <!--<link href="/vendor/tooltipster/css/themes/tooltipster-noir.css" rel="stylesheet" />-->
+        <!--<link href="/vendor/tooltipster/css/themes/tooltipster-light.css" rel="stylesheet" />-->
+        <!--<link href="/vendor/tooltipster/css/themes/tooltipster-shadow.css" rel="stylesheet" />-->
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -170,18 +169,16 @@
             </div>
         </div>
 
-        <!-- jQuery (before Bootstrap) -->
-        <script src="/vendor/jquery/dist/jquery.min.js"></script>
-        <!-- Tooltipster: http://iamceege.github.io/tooltipster -->
-        <script src="/vendor/tooltipster/js/jquery.tooltipster.min.js"></script>
-
-        <!-- Bootstrap  -->
-        <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="/vendor/bootstrap/js/tooltip.js"></script>
-        <!-- Bootstrap Datepicker: http://bootstrap-datepicker.readthedocs.org -->
-        <script src="/vendor/bootstrap-datepicker/js/bootstrap-datepicker.js"></script>
-
-        <!-- ZenPayroll -->
-        <script src="/javascripts/calendar/main.js"></script>
+        <script src='/party/jspm/traceur.src.js'></script>
+        <script src='/party/jspm/es6-module-loader.src.js'></script>
+        <script src='/party/jspm/system.src.js'></script>
+        <script src='jspm_config.js'></script>
+        <script type="module">
+            System.paths['js/*'] = 'javascripts/*/main.js';
+            System.import('js/calendar').then(m => {}, error => {
+                console.error(error.stack);
+            });
+            //# sourceURL=entrypoint.js
+        </script>
     </body>
 </html>
