--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -9,10 +9,7 @@
         <title><%= title %></title>
         <meta charset="utf8" />
         <link rel="stylesheet" href="/stylesheets/password/style.css" />
-        <!-- TODO?: make a common header file for most pages.  -->
-        <script src="/vendor/jquery/dist/jquery.min.js"></script>
-        <script src="/javascripts/password/big.min.js"></script>
-        <script src="/javascripts/password/x.js"></script>
+        <!-- TODO: make a common header file for most pages.  -->
     </head>
     <body>
         <menu id="menu">
@@ -41,18 +38,14 @@
         </menu>
         <iframe src="" style="width: 100%; height: 100%"></iframe>
 
-        <script>
-            $(document).ready(function() {
-                $('.menuitem a').on('click', function(event) {
-                    var _link = $(this);
-                    if (_link.parent().is('.frame')) {
-                        event.preventDefault();
-                        $('iframe').attr('src', _link.attr('href'));
-                    }
-                    else {
-                    }
-                });
-                $('a[href="/clobe"]').trigger('click');
+        <script src='/party/jspm/traceur.src.js'></script>
+        <script src='/party/jspm/es6-module-loader.src.js'></script>
+        <script src='/party/jspm/system.src.js'></script>
+        <script src='jspm_config.js'></script>
+        <script type="module">
+            System.paths['js/*'] = 'javascripts/*/main.js';
+            System.import('js/home').then(m => {}, error => {
+                console.error(error.stack);
             });
         </script>
     </body>
