--- a/app/views/pages/password.html.ejs
+++ b/app/views/pages/password.html.ejs
@@ -10,14 +10,22 @@
         <meta charset="utf8" />
         <link rel="stylesheet" href="/stylesheets/password/style.css" />
         <!-- TODO?: make a common header file for most pages.  -->
-        <script src="/javascripts/password/jquery-1.8.3.min.js"></script>
-        <script src="/javascripts/password/big.min.js"></script>
-        <script src="/javascripts/password/x.js"></script>
     </head>
     <body>
         <div id="generator">
             <h1 id="password">Move your cursor to generate randomness.</h1>
             <button id="generate" disabled="disabled">generate password</button>
         </div>
+
+        <script src='/party/jspm/traceur.src.js'></script>
+        <script src='/party/jspm/es6-module-loader.src.js'></script>
+        <script src='/party/jspm/system.src.js'></script>
+        <script src='jspm_config.js'></script>
+        <script type="module">
+            System.paths['js/*'] = 'javascripts/*/main.js';
+            System.import('js/password').then(m => {}, error => {
+                console.error(error.stack);
+            });
+        </script>
     </body>
 </html>
