--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -48,7 +48,7 @@
                 outline: none;
               }
             .passwordBox input, .passwordBox button {
-                margin-bottom: 5px
+                margin-bottom: 5px;
             }
 
             .font-color-1 {
@@ -101,21 +101,71 @@
             .border-color-5-dark {
                 border-color: #053652
             }
-2D6969
-            ::-webkit-input-placeholder {
-                color: #2D6969;
+
+            button {
+                left: 2px;
+                position: relative;
+
+                background: rgba(64,153,153,1);
+                background: -moz-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
+                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(64,153,153,1)), color-stop(100%, rgba(46,102,102,1)));
+                background: -webkit-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
+                background: -o-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
+                background: -ms-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
+                background: linear-gradient(to bottom, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#409999', endColorstr='#2e6666', GradientType=0 );
+
+                border-top: 1px solid #419e9e;
+                border-left: 1px solid #419e9e;
+
+                border-bottom: 1px solid #244f4f;
+                border-right: 1px solid #244f4f;
+
+                border-radius: 4px;
+            }
+            button:active {
+                background: rgba(46,102,102,1);
+                background: -moz-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
+                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(46,102,102,1)), color-stop(100%, rgba(64,153,153,1)));
+                background: -webkit-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
+                background: -o-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
+                background: -ms-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
+                background: linear-gradient(to bottom, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e6666', endColorstr='#409999', GradientType=0 );
+
+                border-bottom: 1px solid #419e9e;
+                border-right: 2px solid #419e9e;
+
+                border-top: 1px solid #244f4f;
+                border-left: 1px solid #244f4f;
+
+                border-radius: 4px;
             }
 
-            :-moz-placeholder { /* Firefox 18- */
-                color: #2D6969;
+            input {
+                -webkit-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
+                -moz-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
+                box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
+                border: 2px solid #053652;
+            }
+            input:focus {
+                border: 2px solid #cff09e;
             }
 
-            ::-moz-placeholder {  /* Firefox 19+ */
-                color: #2D6969;
+            input:input-placeholder {
+                color: #244f4f;
             }
-
-            :-ms-input-placeholder {
-                color: #2D6969;
+            input::-webkit-input-placeholder {
+                color: #244f4f;
+            }
+            input:-moz-placeholder { /* Firefox 18- */
+                color: #244f4f;
+            }
+            input::-moz-placeholder {  /* Firefox 19+ */
+                color: #244f4f;
+            }
+            input:-ms-input-placeholder {
+                color: #244f4f;
             }
         </style>
     </head>
