Added transitions to input and button borders and glows. The button looks much better now.

--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -102,49 +102,59 @@
                 border-color: #053652
             }
 
+            button, input {
+                -webkit-transition: border 250ms, -webkit-box-shadow 250ms;
+                -moz-transition:    border 250ms, -moz-box-shadow 250ms;
+                -ms-transition:     border 250ms, -ms-box-shadow 250ms;
+                -o-transition:      border 250ms, -o-box-shadow 250ms;
+                transition:         border 250ms, box-shadow 250ms;
+            }
+
             button {
-                left: 2px;
                 position: relative;
+                color: #0B486B!important;
 
-                background: rgba(64,153,153,1);
-                background: -moz-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
-                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(64,153,153,1)), color-stop(100%, rgba(46,102,102,1)));
-                background: -webkit-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
-                background: -o-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
-                background: -ms-linear-gradient(top, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
-                background: linear-gradient(to bottom, rgba(64,153,153,1) 0%, rgba(46,102,102,1) 100%);
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#409999', endColorstr='#2e6666', GradientType=0 );
+                background: rgba(217,255,161,1);
+                background: -moz-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
+                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(217,255,161,1)), color-stop(100%, rgba(186,214,144,1)));
+                background: -webkit-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
+                background: -o-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
+                background: -ms-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
+                background: linear-gradient(to bottom, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9ffa1', endColorstr='#bad690', GradientType=0 );
 
-                border-top: 1px solid #419e9e;
-                border-left: 1px solid #419e9e;
-
-                border-bottom: 1px solid #244f4f;
-                border-right: 1px solid #244f4f;
-
-                border-radius: 4px;
+                border: 2px solid #053652;
             }
             button:active {
-                background: rgba(46,102,102,1);
-                background: -moz-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
-                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(46,102,102,1)), color-stop(100%, rgba(64,153,153,1)));
-                background: -webkit-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
-                background: -o-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
-                background: -ms-linear-gradient(top, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
-                background: linear-gradient(to bottom, rgba(46,102,102,1) 0%, rgba(64,153,153,1) 100%);
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2e6666', endColorstr='#409999', GradientType=0 );
-
-                border-bottom: 1px solid #419e9e;
-                border-right: 2px solid #419e9e;
-
-                border-top: 1px solid #244f4f;
-                border-left: 1px solid #244f4f;
-
-                border-radius: 4px;
+                background: rgba(186,214,144,1);
+                background: -moz-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
+                background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(186,214,144,1)), color-stop(100%, rgba(217,255,161,1)));
+                background: -webkit-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
+                background: -o-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
+                background: -ms-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
+                background: linear-gradient(to bottom, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
+                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bad690', endColorstr='#d9ffa1', GradientType=0 );
+            }
+            button:hover {
+                -webkit-box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -moz-box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -ms-box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -o-box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
+                box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
+            }
+            input:hover {
+                -webkit-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37), 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -moz-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37), 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -ms-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37), 0px 0px 6px 0px rgba(207,240,158,0.7);
+                -o-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37), 0px 0px 6px 0px rgba(207,240,158,0.7);
+                box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37), 0px 0px 6px 0px rgba(207,240,158,0.7);
             }
 
             input {
                 -webkit-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
                 -moz-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
+                -ms-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
+                -o-box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
                 box-shadow: inset 0px 0px 10px 0px rgba(0,0,0,0.37);
                 border: 2px solid #053652;
             }
