Fix Microsoft CSS filter with unquote() for stylus.

--- a/public/stylesheets/passwordReveal/main.styl
+++ b/public/stylesheets/passwordReveal/main.styl
@@ -149,7 +149,7 @@ html {
                 background: -o-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
                 background: -ms-linear-gradient(top, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
                 background: linear-gradient(to bottom, rgba(217,255,161,1) 0%, rgba(186,214,144,1) 100%);
-                /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9ffa1', endColorstr='#bad690', GradientType=0 );*/
+                filter: unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9ffa1', endColorstr='#bad690', GradientType=0 )");
 
                 border: 2px solid #053652;
 
@@ -161,7 +161,7 @@ html {
                     background: -o-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
                     background: -ms-linear-gradient(top, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
                     background: linear-gradient(to bottom, rgba(186,214,144,1) 0%, rgba(217,255,161,1) 100%);
-                    /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bad690', endColorstr='#d9ffa1', GradientType=0 );*/
+                    filter: unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#bad690', endColorstr='#d9ffa1', GradientType=0 )");
                 }
                 &:hover {
                     -webkit-box-shadow: 0px 0px 6px 0px rgba(207,240,158,0.7);
