--- a/public/stylesheets/password/main.css
+++ b/public/stylesheets/password/main.css
@@ -29,33 +29,6 @@ a {
     font-style: normal;
 }
 
-#menu {
-    position: absolute;
-    padding: 20px;
-    margin-top: 50px;
-    margin-left: 50px;
-    list-style: none;
-    background: rgba(0,0,0,0.8);
-    display: block;
-    border-radius: 8px;
-    font-size: 1.3rem;
-    text-transform: lowercase;
-}
-    #menu li {
-        padding-bottom: 10px;
-        display: inline;
-        text-shadow: 0px 4px 2px #000;
-    }
-    #menu a {
-        text-decoration: none;
-    }
-    #menu a:hover {
-        text-decoration: underline;
-    }
-    #menu .sub.menuitem {
-        font-size: 0.8em;
-    }
-
 
 #generator {
     position: absolute;
@@ -102,7 +75,7 @@ a {
         background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
         background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
         background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+        filter:unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0)");
 
         background-color:#77b55a;
 
@@ -131,7 +104,7 @@ a {
         background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
         background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
         background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
-        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+        filter:unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0)");
 
         background-color:#72b352;
     }
