--- a/public/stylesheets/home/main.styl
+++ b/public/stylesheets/home/main.styl
@@ -1,16 +1,29 @@
+fadeStartColor = rgba(0,0,0,0.3);
+fadeEndColor = rgba(0,0,0,0.8);
 
 html {
   body {
-    .gradient {
-      background: rgba(0,0,0,0.51);
-      background: -moz-linear-gradient(left, rgba(0,0,0,0.51) 0%, rgba(255,255,255,0) 100%);
-      background: -webkit-gradient(left top, right top, color-stop(0%, rgba(0,0,0,0.51)), color-stop(100%, rgba(255,255,255,0)));
-      background: -webkit-linear-gradient(left, rgba(0,0,0,0.51) 0%, rgba(255,255,255,0) 100%);
-      background: -o-linear-gradient(left, rgba(0,0,0,0.51) 0%, rgba(255,255,255,0) 100%);
-      background: -ms-linear-gradient(left, rgba(0,0,0,0.51) 0%, rgba(255,255,255,0) 100%);
-      background: linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(255,255,255,0) 100%);
+    .fadeLeft {
+      background: fadeEndColor;
+      background: -moz-linear-gradient(left, fadeEndColor 0%, fadeStartColor 100%);
+      background: -webkit-gradient(left top, right top, color-stop(0%, fadeEndColor), color-stop(100%, fadeStartColor));
+      background: -webkit-linear-gradient(left, fadeEndColor 0%, fadeStartColor 100%);
+      background: -o-linear-gradient(left, fadeEndColor 0%, fadeStartColor 100%);
+      background: -ms-linear-gradient(left, fadeEndColor 0%, fadeStartColor 100%);
+      background: linear-gradient(to right, fadeEndColor 0%, fadeStartColor 100%);
       filter: unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=1 )");
     }
+    .fadeRight {
+      background: fadeStartColor;
+      background: -moz-linear-gradient(left, fadeStartColor 0%, fadeEndColor 100%);
+      background: -webkit-gradient(left top, right top, color-stop(0%, fadeStartColor), color-stop(100%, fadeEndColor));
+      background: -webkit-linear-gradient(left, fadeStartColor 0%, fadeEndColor 100%);
+      background: -o-linear-gradient(left, fadeStartColor 0%, fadeEndColor 100%);
+      background: -ms-linear-gradient(left, fadeStartColor 0%, fadeEndColor 100%);
+      background: linear-gradient(to right, fadeStartColor 0%, fadeEndColor 100%);
+      filter: unquote("progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ffffff', GradientType=1 )");
+    }
+
     .hidden {
       display: none;
     }
@@ -19,17 +32,16 @@ html {
     }
 
     #menu {
+      box-sizing: border-box;
       position: absolute;
+      width: 100%;
+      height: 100%;
       padding: 20px;
-      /*margin-top: 50px;*/
-      /*margin-left: 50px;*/
       margin: 0;
       list-style: none;
       background: rgba(0,0,0,0.8);
       display: block;
-      /*border-radius: 8px;*/
       font-size: 1.3rem;
-      /*text-transform: lowercase;*/
 
       li {
         padding-bottom: 10px;
@@ -44,6 +56,20 @@ html {
       }
       .sub.menuitem {
         font-size: 0.8rem;
+      }
+      &:after {
+          content: '';
+          position: absolute;
+          top: 50%;
+          margin-top: -10px;
+          left: 100%;
+
+          /*triangle*/
+          width: 0;
+          height: 0;
+          border-top: 10px solid transparent;
+          border-left: 10px solid rgba(0,0,0,0.8);
+          border-bottom: 10px solid transparent;
       }
     }
   }
