Added more links to menu.

--- a/public/stylesheets/passwordReveal/main.styl
+++ b/public/stylesheets/passwordReveal/main.styl
@@ -30,6 +30,9 @@ html {
         a {
             color: inherit;
         }
+        a:hover {
+            text-decoration: underline;
+        }
     }
 }
 
