--- a/app/views/pages/clobe.html.ejs
+++ b/app/views/pages/clobe.html.ejs
@@ -48,6 +48,7 @@
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
+            console.log('clobe.html.ejs');
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/clobe').then(m => {}, error => {
                 console.error(error.stack);
