--- a/app/views/pages/password.html.ejs
+++ b/app/views/pages/password.html.ejs
@@ -23,8 +23,20 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/password').then(m => {}, error => {
-                console.error(error.stack);
+            System.import('js/password').catch(scriptErrors => {
+                if (scriptErrors.forEach) {
+                    scriptErrors.forEach(function(error) {
+                        console.error(error);
+                    });
+                }
+                else if (scriptErrors.stack) {
+                    console.error(scriptErrors.stack);
+                }
+                else {
+                    console.error(scriptErrors);
+                }
+            }).then(module => {}, importError => {
+                console.error(importError.stack);
             });
         </script>
     </body>
