--- a/app/views/pages/clobe.html.ejs
+++ b/app/views/pages/clobe.html.ejs
@@ -56,6 +56,9 @@
                         console.error(error);
                     });
                 }
+                else if (scriptErrors.stack) {
+                    console.error(scriptErrors.stack);
+                }
                 else {
                     console.error(scriptErrors);
                 }
