Took out my components and put them in their own repo.
Better System.import error handling.

--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -18,17 +18,11 @@
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/passwordReveal').catch(scriptErrors => {
-                if (scriptErrors.forEach) {
-                    scriptErrors.forEach(function(error) {
-                        console.error(error);
-                    });
-                }
-                else if (scriptErrors.stack) {
-                    console.error(scriptErrors.stack);
-                }
-                else {
-                    console.error(scriptErrors);
-                }
+                scriptErrors = scriptErrors.forEach? scriptErrors: [scriptErrors];
+
+                scriptErrors.forEach(function(err) {
+                    console.error(err.stack? err.stack: err);
+                });
             }).then(module => {}, importError => {
                 console.error(importError.stack);
             });
