meta viewport for mobile.

--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -8,6 +8,7 @@
        -->
         <title><%= title %></title>
         <meta charset="utf8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <script src='/party/jspm/traceur.src.js'></script>
