Improve error handling (thanks Guy Bedford).

--- a/app/views/pages/calendar.html.ejs
+++ b/app/views/pages/calendar.html.ejs
@@ -176,13 +176,13 @@
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/calendar').catch(scriptErrors => {
-                scriptErrors = scriptErrors.forEach? scriptErrors: [scriptErrors];
-
-                scriptErrors.forEach(function(err) {
-                    console.error(err.stack? err.stack: err);
-                });
+                if (scriptError.stack)
+                    setTimeout(function() { throw scriptError; });
+                else console.error(scriptError);
             }).then(module => {}, importError => {
-                console.error(importError.stack);
+                if (importError.stack)
+                    setTimeout(function() { throw importError; });
+                else console.error(importError);
             });
         </script>
     </body>
