--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -49,7 +49,7 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/flipDiagonal').catch(scriptErrors => {
+            System.import('js/flipDiagonal').catch(scriptError => {
                 if (scriptError.stack)
                     setTimeout(function() { throw scriptError; });
                 else console.error(scriptError);
