--- a/app/views/pages/password.html.ejs
+++ b/app/views/pages/password.html.ejs
@@ -23,7 +23,7 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/password').catch(scriptErrors => {
+            System.import('js/password').catch(scriptError => {
                 if (scriptError.stack)
                     setTimeout(function() { throw scriptError; });
                 else console.error(scriptError);
