--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -17,7 +17,7 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/passwordReveal').catch(scriptErrors => {
+            System.import('js/passwordReveal').catch(scriptError => {
                 if (scriptError.stack)
                     setTimeout(function() { throw scriptError; });
                 else console.error(scriptError);
