--- a/public/stylesheets/home/main.styl
+++ b/public/stylesheets/home/main.styl
@@ -1,6 +1,3 @@
-fadeStartColor = rgba(0,0,0,0.3);
-fadeEndColor = rgba(0,0,0,0.8);
-
 html {
     body {
         .hidden {
@@ -18,7 +15,7 @@ html {
             padding: 20px;
             margin: 0;
             list-style: none;
-            background: rgba(0,0,0,0.8);
+            background: rgb(45,45,45);
             display: block;
             font-size: 1.3rem;
 
@@ -47,7 +44,7 @@ html {
                 width: 0;
                 height: 0;
                 border-top: 10px solid transparent;
-                border-left: 10px solid rgba(0,0,0,0.8);
+                border-left: 10px solid rgb(45,45,45);
                 border-bottom: 10px solid transparent;
             }
         }
