--- a/app/views/pages/webglearth.html.ejs
+++ b/app/views/pages/webglearth.html.ejs
@@ -8,17 +8,23 @@
        -->
         <title><%= title %></title>
         <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     </head>
     <body>
+
+        <script src='/party/bower/webglearth/index.js'></script>
+
         <script src='/party/jspm/traceur.src.js'></script>
         <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/home');
-            });
+            System.import('js/webglearth');
         </script>
+
+        <div id="webglearth"></div>
+
     </body>
 </html>
+
