Moved infamous and army-knife (javascripts/utils) to npm. Updated deps.

--- a/app/views/pages/clobe.html.ejs
+++ b/app/views/pages/clobe.html.ejs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/stylesheets/screen.css" />
     </head>
     <body>
-        <link rel='stylesheet' type='text/css' href="/party/bower/leaflet/dist/leaflet.css" />
+        <link rel='stylesheet' type='text/css' href="/party/jspm/github/RickMohr/Leaflet@better-inertial-scrolling/dist/leaflet.css" />
         <style>
             /*
              * Items marked with a "js" comment are set dynamically with javascript, and generally
@@ -40,9 +40,6 @@
                 display: none;
             }
         </style>
-
-        <script src='/party/bower/leaflet/dist/leaflet.js'></script>
-
         <script src='/party/jspm/traceur.src.js'></script>
         <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
