--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -12,6 +12,7 @@
     </head>
     <body>
         <script src='/party/jspm/traceur.src.js'></script>
+        <!--<script src='app.js'></script>-->
         <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
