--- a/app/views/pages/clobe.html.ejs
+++ b/app/views/pages/clobe.html.ejs
@@ -46,15 +46,7 @@
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/clobe').catch(scriptError => {
-                if (scriptError.stack)
-                    setTimeout(function() { throw scriptError; });
-                else console.error(scriptError);
-            }).then(module => {}, importError => {
-                if (importError.stack)
-                    setTimeout(function() { throw importError; });
-                else console.error(importError);
-            });
+            System.import('js/clobe');
         </script>
     </body>
 </html>
