--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -11,14 +11,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <script src='/party/jspm/traceur.src.js'></script>
-        <!--<script src='app.js'></script>-->
-        <script src='/party/jspm/es6-module-loader.src.js'></script>
+
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/home');
         </script>
+
+        <!--<script src='/party/jspm/traceur.src.js'></script>-->
+        <!--<script src='app.js'></script>-->
     </body>
 </html>
