--- a/app/views/pages/flip_diagonal.html.ejs
+++ b/app/views/pages/flip_diagonal.html.ejs
@@ -43,21 +43,11 @@
         </style>
     </head>
     <body>
-        <script src='/party/jspm/traceur.src.js'></script>
-        <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/flipDiagonal').catch(scriptError => {
-                if (scriptError.stack)
-                    setTimeout(function() { throw scriptError; });
-                else console.error(scriptError);
-            }).then(module => {}, importError => {
-                if (importError.stack)
-                    setTimeout(function() { throw importError; });
-                else console.error(importError);
-            });
+            System.import('js/flipDiagonal');
         </script>
     </body>
 </html>
