--- a/app/views/pages/password_reveal.html.ejs
+++ b/app/views/pages/password_reveal.html.ejs
@@ -11,21 +11,11 @@
         <link rel='stylesheet' type='text/css' href="https://famo.us/lib/famous/famous.css" />
     </head>
     <body>
-        <script src='/party/jspm/traceur.src.js'></script>
-        <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/passwordReveal').catch(scriptError => {
-                if (scriptError.stack)
-                    setTimeout(function() { throw scriptError; });
-                else console.error(scriptError);
-            }).then(module => {}, importError => {
-                if (importError.stack)
-                    setTimeout(function() { throw importError; });
-                else console.error(importError);
-            });
+            System.import('js/passwordReveal');
         </script>
     </body>
 </html>
