--- a/app/views/pages/scroll_view_test.html.ejs
+++ b/app/views/pages/scroll_view_test.html.ejs
@@ -11,22 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <script src='/party/jspm/traceur.src.js'></script>
-        <script src='/party/jspm/es6-module-loader.src.js'></script>
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
         <script type="module">
             System.paths['js/*'] = 'javascripts/*/main.js';
-            System.import('js/scrollViewTest').catch(scriptError => {
-                if (scriptError.stack)
-                    setTimeout(function() { throw scriptError; });
-                else console.error(scriptError);
-            }).then(module => {}, importError => {
-                if (importError.stack)
-                    setTimeout(function() { throw importError; });
-                else console.error(importError);
-            });
+            System.import('js/scrollViewTest');
         </script>
+
         <style type="text/css" media="all">
             .fmsCtx {
                 position: absolute;
