--- a/app/views/pages/home.html.ejs
+++ b/app/views/pages/home.html.ejs
@@ -12,13 +12,15 @@
     </head>
     <body>
 
+        <!--Use this one-->
         <script src='/party/jspm/system.src.js'></script>
         <script src='jspm_config.js'></script>
-        <script type="module">
+        <script>
             System.paths['js/*'] = 'javascripts/*/main.js';
             System.import('js/home');
         </script>
 
+        <!--or this one.-->
         <!--<script src='/party/jspm/traceur.src.js'></script>-->
         <!--<script src='app.js'></script>-->
     </body>
