--- a/public/stylesheets/calendar/main.css
+++ b/public/stylesheets/calendar/main.css
@@ -81,7 +81,7 @@
     line-height: 40px;
     color: white;
     text-align: center;
-    width: 40px;
+    width; 40px;
     height: 40px;
     border-radius: 50%;
     background: #4EA54E; /*green*/
