--- a/client/home/style.css
+++ b/client/home/style.css
@@ -1,14 +1,17 @@
 
 #scene1-container {
     width: 100%;
-    height: 400px;
-    border: 10px solid lightblue;
+    height: 300px;
+}
+
+#scene1 {
+    background: rgb(40,40,40)
 }
 
 #scene2 {
     width: 300px;
     height: 300px;
-    background: rgba(0,0,0,0.1)
+    background: rgba(0,0,0,0.8)
 }
 
 .border {
