--- a/client/main.css
+++ b/client/main.css
@@ -3,4 +3,9 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    pointer-events: all;
+}
+
+.content * {
+    pointer-events: none;
 }
