--- a/meteor-app/client/main.css
+++ b/meteor-app/client/main.css
@@ -1,3 +1,7 @@
+#react-app-root {
+    width: 100%;
+    height: 100%;
+}
 
 .content {
     width: 100%;
@@ -10,13 +14,8 @@
     pointer-events: none;
 }
 
-#scene1-container {
-    width: 100%;
-    height: 300px;
-}
-
-#scene1 {
-    background: rgb(40,40,40)
+.scene-wrapper {
+    position: relative;
 }
 
 #scene2 {
