--- a/meteor-app/client/main.css
+++ b/meteor-app/client/main.css
@@ -1,3 +1,10 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 #app-root {
     width: 100%;
     height: 100%;
